availabilities on mobile fix

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -639,6 +639,32 @@ h1 ul li.active-expertise {
 	height: 100px;
 }
 
+@media screen and (max-width: 992px) {
+	.height-fix {
+		height: 150px;
+	}
+
+}
+
+@media screen and (max-width: 767px) {
+	.avail-request-form {
+		padding: 20px;
+	}
+}
+
+@media screen and (max-width: 440px) {
+	.height-fix {
+		height: 175px;
+	}
+	.advisor-avail-single {
+		width: 48%;
+	}
+	.avail-request-form {
+		padding: 20px;
+	}
+}
+
+
 .tt-dropdown-menu {
 	text-align: left !important;
 }
